--- a/.github/workflows/workflow.yml
+++ b/.github/workflows/workflow.yml
@@ -29,6 +29,4 @@ jobs:
          - name: Run unit tests with pytests
            run:  pytest -v --tb=short --color=yes --cov=src --cov-report=term-missing
          - name: Scan for vulnerabilities with Bandit
-           run: |
-            python -m pip install bandit
-            bandit -r src
+           run: bandit -r src
